feat : added deduplication
